--- a/GV24/Views/Cells/CellHistory/FinishedWorkCell.xib
+++ b/GV24/Views/Cells/CellHistory/FinishedWorkCell.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="238"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="237"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="237.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view alpha="0.30000001192092896" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6JX-1Q-xbz">
@@ -38,7 +38,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dọn dẹp nhà cửa" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4f-Yg-jJf">
-                        <rect key="frame" x="71" y="34" width="97" height="15"/>
+                        <rect key="frame" x="71" y="34" width="96.5" height="14"/>
                         <fontDescription key="fontDescription" name="SFUIText-Light" family="SF UI Text" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -79,13 +79,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500.000 VND" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lK4-OF-8jx">
-                        <rect key="frame" x="40" y="124.5" width="76" height="15"/>
+                        <rect key="frame" x="40" y="125" width="76" height="14"/>
                         <fontDescription key="fontDescription" name="SFUIText-Light" family="SF UI Text" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10/10/2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oj-Fy-raL">
-                        <rect key="frame" x="40" y="159.5" width="61" height="15"/>
+                        <rect key="frame" x="40" y="160" width="61" height="14"/>
                         <fontDescription key="fontDescription" name="SFUIText-Light" family="SF UI Text" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -104,7 +104,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9h00 am - 12h00 pm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="We0-ti-Eyc">
-                        <rect key="frame" x="187" y="159.5" width="118" height="15"/>
+                        <rect key="frame" x="187" y="160" width="118" height="14"/>
                         <fontDescription key="fontDescription" name="SFUIText-Light" family="SF UI Text" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -157,6 +157,14 @@
                 <outlet property="addressImage" destination="w6W-Ac-chQ" id="7QE-x3-vqG"/>
                 <outlet property="dateImage" destination="JiD-AK-gny" id="Ctr-xj-qR5"/>
                 <outlet property="salaryImage" destination="olJ-UK-exx" id="xhu-xG-Fyv"/>
+                <outlet property="workAddressLabel" destination="aCH-JF-qhT" id="iPm-Q5-doW"/>
+                <outlet property="workContentLabel" destination="BTp-yg-o1g" id="gwt-hh-Ygf"/>
+                <outlet property="workCreateAtLabel" destination="5oj-Fy-raL" id="hSq-oB-Ogh"/>
+                <outlet property="workImage" destination="jBP-uT-YKh" id="DSv-Ik-9IM"/>
+                <outlet property="workNameLabel" destination="4g8-qc-JJK" id="H22-RQ-75c"/>
+                <outlet property="workSalaryLabel" destination="lK4-OF-8jx" id="2kx-ed-i6S"/>
+                <outlet property="workTimeLabel" destination="We0-ti-Eyc" id="dOs-gB-0Kx"/>
+                <outlet property="workTypeLabel" destination="K4f-Yg-jJf" id="V7p-lM-ygB"/>
             </connections>
             <point key="canvasLocation" x="-164" y="91"/>
         </tableViewCell>
