--- a/GV24/Views/Cells/CellHistory/WorkerViewCell.xib
+++ b/GV24/Views/Cells/CellHistory/WorkerViewCell.xib
@@ -21,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="169"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="168"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="168.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="baby" translatesAutoresizingMaskIntoConstraints="NO" id="Q6q-fu-6ZL">
@@ -32,13 +32,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nguyễn Văn A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="piy-bP-BF0">
-                        <rect key="frame" x="63" y="10" width="99" height="18"/>
+                        <rect key="frame" x="63" y="10" width="98.5" height="18"/>
                         <fontDescription key="fontDescription" name="SFUIText-Light" family="SF UI Text" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123 đường 1, Quận 1, Thành phố Hồ Chí Minh" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvl-xl-DyO">
-                        <rect key="frame" x="63" y="33" width="242" height="14"/>
+                        <rect key="frame" x="63" y="33" width="242" height="13"/>
                         <fontDescription key="fontDescription" name="SFUIText-Light" family="SF UI Text" pointSize="11"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -91,7 +91,11 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="addressLabel" destination="Mvl-xl-DyO" id="uLS-hA-bZF"/>
                 <outlet property="arrowForward" destination="kaV-GZ-FGm" id="INU-uR-Hsc"/>
+                <outlet property="commentLabel" destination="Ppb-M5-8mg" id="OjH-vS-D4Q"/>
+                <outlet property="imageUser" destination="Q6q-fu-6ZL" id="7YR-UI-1xJ"/>
+                <outlet property="nameLabel" destination="piy-bP-BF0" id="Oc6-fR-ROc"/>
             </connections>
             <point key="canvasLocation" x="34" y="84.5"/>
         </tableViewCell>
